feat: auth system
